<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="text"
        android:hint="@string/et_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/et_last_name"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_last_name"
        android:text="@string/gender"
        android:textSize="20dp"
        android:layout_margin="16dp"
        />

    <Spinner
        android:id="@+id/spn_gender"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_last_name"
        />

    <TextView
        android:id="@+id/tv_bdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spn_gender"
        android:text="@string/nacimiento"
        android:textSize="20dp"
        android:layout_margin="16dp"
        />


    <EditText
        android:id="@+id/et_bdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="12dp"
        android:hint="dd/mm/yyyy"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@id/rb_yes"
        app:layout_constraintLeft_toRightOf="@id/tv_bdate" />

    <TextView
        android:text="@string/programming"
        android:id="@+id/tv_programmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bdate"
        />

    <RadioButton
        android:text="@string/yes"
        android:id="@+id/rb_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/tv_programmer"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_bdate"
        />

    <RadioButton
        android:text="@string/no"
        android:id="@+id/rb_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toRightOf="@id/rb_yes"
        app:layout_constraintTop_toBottomOf="@id/tv_bdate"
        />

    <TextView
        android:textSize="20dp"
        android:id="@+id/tv_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lenguaje: "
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_programmer"
        android:layout_margin="16dp"

        />
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chbx_java"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Java"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toRightOf="@id/tv_language"
        app:layout_constraintTop_toBottomOf="@id/tv_programmer"
        />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chbx_python"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Python"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toRightOf="@id/chbx_java"
        app:layout_constraintTop_toBottomOf="@id/tv_programmer"
        />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chbx_js"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="JS"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toRightOf="@id/tv_language"
        app:layout_constraintTop_toBottomOf="@id/chbx_java"
        />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chbx_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Go Land"
        app:layout_constraintTop_toBottomOf="@id/chbx_java"
        tools:layout_editor_absoluteX="210dp"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chbx_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="C/C++"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toRightOf="@id/tv_language"
        app:layout_constraintTop_toBottomOf="@id/chbx_js"
        />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chbx_cs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="C#"
        app:layout_constraintTop_toBottomOf="@id/chbx_go"
        tools:layout_editor_absoluteX="210dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_clear"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>